--- a/templates/index.html
+++ b/templates/index.html
@@ -45,9 +45,33 @@
                     </li>
                 </ul>
             </div>
+               <!-- Add before the cart dropdown in navbar -->
+                <ul class="navbar-nav me-3">
+                    {% if session.user_id %}
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="accountDropdown" role="button" data-bs-toggle="dropdown">
+                                {{ session.user_name }}
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="{{ url_for('account') }}">My Account</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a></li>
+                            </ul>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+                        </li>
+                    {% endif %}
+                </ul>
         </div>
     </nav>
 
+         
+        
     <!-- Hero Section -->
     <section class="hero text-center text-white d-flex align-items-center"
              style="background-image: url('{{ url_for('static', filename='img/Homepage_cof.webp') }}'); min-height:75vh; background-position:center; background-size:cover;">
