--- a/templates/machines.html
+++ b/templates/machines.html
@@ -9,7 +9,7 @@
 </head>
 <body class="site-bg text-dark d-flex flex-column min-vh-100">
 
-     <!-- Navbar -->
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light site-nav shadow-sm">
         <div class="container">
             <a class="navbar-brand fw-bold d-flex align-items-center" href="{{ url_for('index') }}">
@@ -46,8 +46,25 @@
                     </li>
                 </ul>
 
-                <!-- Right-aligned: Account + Cart -->
+                <!-- Right-aligned: Role-based menu + Account + Cart -->
                 <ul class="navbar-nav ms-auto">
+                    <!-- Role-based admin/manager menu -->
+                    {% if session.user_role in ['admin', 'manager'] %}
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button" data-bs-toggle="dropdown">
+                                {% if session.user_role == 'manager' %}Manager Tools{% else %}Admin Tools{% endif %}
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-end">
+                                <li><a class="dropdown-item" href="{{ url_for('manage_product', action='add') }}">Add Product</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('manage_product', action='edit') }}">Edit Products</a></li>
+                                {% if session.user_role == 'manager' %}
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="{{ url_for('manage_staff') }}">Manage Staff</a></li>
+                                {% endif %}
+                            </ul>
+                        </li>
+                    {% endif %}
+
                     <!-- Account dropdown -->
                     {% if session.user_id %}
                         <li class="nav-item dropdown">
@@ -95,6 +112,7 @@
             </div>
         </div>
     </nav>
+
 
     <!-- Hero -->
     <section class="hero text-center text-white d-flex align-items-center"
