--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
                     </li>
                     <li class="nav-item dropdown px-3">
                         <a class="nav-link dropdown-toggle" href="#" id="machinesDropdown" role="button" data-bs-toggle="dropdown">
-                            Shop Machines
+                            Machines
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="{{ url_for('machines', category='semi-auto') }}">Semi-Automatic</a></li>
@@ -36,10 +36,10 @@
                         </ul>
                     </li>
                     <li class="nav-item px-3">
-                        <a class="nav-link" href="{{ url_for('beans') }}">Shop Beans</a>
+                        <a class="nav-link" href="{{ url_for('beans') }}">Beans</a>
                     </li>
                     <li class="nav-item px-3">
-                        <a class="nav-link" href="{{ url_for('accessories') }}">Shop Accessories</a>
+                        <a class="nav-link" href="{{ url_for('accessories') }}">Accessories</a>
                     </li>
                     <li class="nav-item px-3">
                         <a class="nav-link" href="{{ url_for('about') }}">About</a>
